server/dev_out3.txt
C:\Users\Ritesh Gupta\Desktop\VENDOR PLATFORM\server\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/middlewares/authenticate.ts(31,21): error TS2352: Conversion of type 'Jwt & JwtPayload & void' to type 'JwtPayload' may be a mistake because neither type sufficiently overlaps with the other. If this was intentional, convert the expression to 'unknown' first.
  Type 'Jwt & JwtPayload & void' is missing the following properties from type 'JwtPayload': userId, role, companyId
src/middlewares/authenticate.ts(31,32): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Argument of type 'string | undefined' is not assignable to parameter of type 'string'.
      Type 'undefined' is not assignable to type 'string'.

    at createTSError (C:\Users\Ritesh Gupta\Desktop\VENDOR PLATFORM\server\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\Ritesh Gupta\Desktop\VENDOR PLATFORM\server\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\Ritesh Gupta\Desktop\VENDOR PLATFORM\server\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\Ritesh Gupta\Desktop\VENDOR PLATFORM\server\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\Ritesh Gupta\Desktop\VENDOR PLATFORM\server\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1699:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\Ritesh Gupta\Desktop\VENDOR PLATFORM\server\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1313:32)
    at Function._load (node:internal/modules/cjs/loader:1123:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2352, 2769 ]
}
